Attempt to fix text overflow on press page

--- a/_sass/page-specific/_page-press.scss
+++ b/_sass/page-specific/_page-press.scss
@@ -8,7 +8,6 @@
 
   .masthead.masthead-partitions{
 
-
       .masthead-item,
       .item{
         // Account for stacked partitions on extra-small screens
@@ -45,9 +44,13 @@
           left: 50%;
           transform: translate(-50%, -50%);
           width: 80%;
+          max-width: 80%;
         }
 
         blockquote{
+          width: 100%;
+          max-width: 100%;
+
           p{
             @extend .lead;
             color: $kd-gold;
